add minor files

--- a/goit-js-hw-03/index.html
+++ b/goit-js-hw-03/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework-1</title>
+    <title>Homework-3</title>
   </head>
   <body>
     <ul>
@@ -15,6 +15,8 @@
       <li><a href="./HTML/task-5.html">task-5</a></li>
       <li><a href="./HTML/task-6.html">task-6</a></li>
       <li><a href="./HTML/task-7.html">task-7</a></li>
+      <li><a href="./HTML/callback.html">Callback</a></li>
+      <li><a href="./HTML/lock.html">Lock</a></li>
     </ul>
   </body>
 </html>
